@@ -1,0 +1,1 @@
+MD5 0c03d957aec557857ffc7941243083d9 acpid-1.0.1.tar.gz 15762
